<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/explorer"
        android:icon="@drawable/ic_search_hint"
        android:title="@string/title_explorer" />

    <item
        android:id="@+id/nets"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_nets" />

    <item
        android:id="@+id/activity"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_activity" />

    <item
        android:id="@+id/postJob"
        android:icon="@drawable/ic_baseline_post_job"
        android:title="@string/title_post_job" />

</menu>