<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="200dp"
    android:paddingHorizontal="@dimen/padding_small"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="@dimen/margin_small"
    android:layout_marginVertical="@dimen/margin_default"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="@dimen/corner_default"
    app:cardElevation="8dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/person"
            app:layout_constraintBottom_toTopOf="@+id/text1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
             />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/text1"
            android:paddingHorizontal="@dimen/padding_small"
            android:layout_marginTop="@dimen/margin_small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/maya_is_interested_in"
            app:layout_constraintBottom_toTopOf="@+id/text2"
            app:layout_constraintTop_toBottomOf="@+id/imageView"
            tools:ignore="MissingConstraints" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/text2"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:paddingHorizontal="@dimen/padding_small"
            android:layout_marginTop="@dimen/margin_small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="2"
            android:text="@string/sr_business_manager"
            app:layout_constraintBottom_toTopOf="@+id/text3"
            app:layout_constraintTop_toBottomOf="@+id/text1"
            tools:ignore="MissingConstraints" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/text3"
            android:layout_marginTop="@dimen/margin_small"
            android:paddingHorizontal="@dimen/padding_small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_goneMarginBottom="@dimen/margin_small"
            android:text="@string/london_remotely"
            app:layout_constraintBottom_toTopOf="@id/rate"
            app:layout_constraintTop_toBottomOf="@+id/text2"
            tools:ignore="MissingConstraints" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/rate"
            android:paddingHorizontal="@dimen/padding_small"
            android:layout_marginTop="@dimen/margin_small"
            android:layout_marginBottom="@dimen/margin_small"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/london_remotely"
            app:layout_constraintTop_toBottomOf="@id/text3"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:ignore="MissingConstraints" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>